@@ -4,6 +4,8 @@ BETA PUBLIC RELEASE VERSION 0.4.1       XX-XX-XX
   - NEW FEATURES
     * Modified the license to allow exceptions for packaging APBS binaries
       with several visualization programs.
+    * Added a DONEUMANN macro to vfetk.c to test FEM problems with all Neumann
+      boundary conditions (e.g., membranes).
   - BUG FIXES
     * Fixed problems with FEM-based LPBE and LRPBE calculations
     * Fixed a minor bug in the configure script that prevented MPI libraries
